--- a/bp.html
+++ b/bp.html
@@ -80,7 +80,7 @@ h3 {
    
    <div style="text-align:center;"><img src="profile.jpeg" alt="Berenice Perez" height="480" width="640">
      
-<p>My name is Berenice Perez.
+<p><font size="3">My name is Berenice Perez.
   I go to De La Salle Institute, and I am a rising junior.
   I;m part of the National Honors Society, and have all honors classes.
   I am Mexican; I love to play soccer and go swimming.
@@ -97,7 +97,7 @@ h3 {
    If I saw the opportunity for extra credit, I would take it and do it.
    My grade for the end of the class was a 92.8; I was so devastated because I didn’t end with a 93.0 which is an A.</p>
 
-   <p>My only hope was to get an A in my final, but I was about to give up.
+   <p><font size="3">My only hope was to get an A in my final, but I was about to give up.
     But I told myself, "Don’t give up just yet, you still need finals."
   So I studied those two weeks before finals so I would pass it with an A.
   I got help from the teacher himself and tutors from my scholarship; I looked over all my notes and my powerpoints and retaught myself.
@@ -110,7 +110,7 @@ h3 {
     I decide what grade I give you, and you came to me when you needed help or wanted to go over the lecture again.
     So, I put more extra credit for you.”</p>
 
-<p>My advice for you guys is to never give up, no matter how much you want to;
+<p><font size="3">My advice for you guys is to never give up, no matter how much you want to;
    instead find a motivation not to give up.
    Also, ask for help from your teachers and create a good relationship with your teachers because they will help you when you need them.</p>
 
